@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2020 the original author or authors.
+ * Copyright 2002-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -18,7 +18,6 @@ package org.springframework.http;
 
 import java.net.InetSocketAddress;
 import java.net.URI;
-import java.net.URISyntaxException;
 import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
 import java.time.ZoneId;
@@ -45,7 +44,7 @@ import static org.assertj.core.api.Assertions.assertThatIllegalArgumentException
 import static org.assertj.core.api.Assertions.entry;
 
 /**
- * Unit tests for {@link org.springframework.http.HttpHeaders}.
+ * Tests for {@link org.springframework.http.HttpHeaders}.
  *
  * @author Arjen Poutsma
  * @author Sebastien Deleuze
@@ -53,7 +52,7 @@ import static org.assertj.core.api.Assertions.entry;
  * @author Juergen Hoeller
  * @author Sam Brannen
  */
-public class HttpHeadersTests {
+class HttpHeadersTests {
 
 	private final HttpHeaders headers = new HttpHeaders();
 
@@ -152,8 +151,8 @@ public class HttpHeadersTests {
 	}
 
 	@Test
-	void location() throws URISyntaxException {
-		URI location = new URI("https://www.example.com/hotels");
+	void location() {
+		URI location = URI.create("https://www.example.com/hotels");
 		headers.setLocation(location);
 		assertThat(headers.getLocation()).as("Invalid Location header").isEqualTo(location);
 		assertThat(headers.getFirst("Location")).as("Invalid Location header").isEqualTo("https://www.example.com/hotels");
@@ -201,7 +200,7 @@ public class HttpHeadersTests {
 	void ifMatch() {
 		String ifMatch = "\"v2.6\"";
 		headers.setIfMatch(ifMatch);
-		assertThat(headers.getIfMatch().get(0)).as("Invalid If-Match header").isEqualTo(ifMatch);
+		assertThat(headers.getIfMatch()).containsExactly(ifMatch);
 		assertThat(headers.getFirst("If-Match")).as("Invalid If-Match header").isEqualTo("\"v2.6\"");
 	}
 
@@ -215,8 +214,7 @@ public class HttpHeadersTests {
 	void ifMatchMultipleHeaders() {
 		headers.add(HttpHeaders.IF_MATCH, "\"v2,0\"");
 		headers.add(HttpHeaders.IF_MATCH, "W/\"v2,1\", \"v2,2\"");
-		assertThat(headers.get(HttpHeaders.IF_MATCH).get(0)).as("Invalid If-Match header").isEqualTo("\"v2,0\"");
-		assertThat(headers.get(HttpHeaders.IF_MATCH).get(1)).as("Invalid If-Match header").isEqualTo("W/\"v2,1\", \"v2,2\"");
+		assertThat(headers.get(HttpHeaders.IF_MATCH)).containsExactly("\"v2,0\"", "W/\"v2,1\", \"v2,2\"");
 		assertThat(headers.getIfMatch()).contains("\"v2,0\"", "W/\"v2,1\"", "\"v2,2\"");
 	}
 
@@ -224,7 +222,7 @@ public class HttpHeadersTests {
 	void ifNoneMatch() {
 		String ifNoneMatch = "\"v2.6\"";
 		headers.setIfNoneMatch(ifNoneMatch);
-		assertThat(headers.getIfNoneMatch().get(0)).as("Invalid If-None-Match header").isEqualTo(ifNoneMatch);
+		assertThat(headers.getIfNoneMatch()).containsExactly(ifNoneMatch);
 		assertThat(headers.getFirst("If-None-Match")).as("Invalid If-None-Match header").isEqualTo("\"v2.6\"");
 	}
 
@@ -232,7 +230,7 @@ public class HttpHeadersTests {
 	void ifNoneMatchWildCard() {
 		String ifNoneMatch = "*";
 		headers.setIfNoneMatch(ifNoneMatch);
-		assertThat(headers.getIfNoneMatch().get(0)).as("Invalid If-None-Match header").isEqualTo(ifNoneMatch);
+		assertThat(headers.getIfNoneMatch()).containsExactly(ifNoneMatch);
 		assertThat(headers.getFirst("If-None-Match")).as("Invalid If-None-Match header").isEqualTo("*");
 	}
 
@@ -473,26 +471,31 @@ public class HttpHeadersTests {
 
 	@Test
 	void acceptLanguage() {
-		String headerValue = "fr-ch, fr;q=0.9, en-*;q=0.8, de;q=0.7, *;q=0.5";
+		String headerValue = "fr-ch, fr;q=0.9, en-*;q=0.8, de;q=0.7, *-us;q=0.6, *;q=0.5";
 		headers.setAcceptLanguage(Locale.LanguageRange.parse(headerValue));
 		assertThat(headers.getFirst(HttpHeaders.ACCEPT_LANGUAGE)).isEqualTo(headerValue);
 
-		List<Locale.LanguageRange> expectedRanges = Arrays.asList(
+		List<Locale.LanguageRange> expectedRanges = List.of(
 				new Locale.LanguageRange("fr-ch"),
 				new Locale.LanguageRange("fr", 0.9),
 				new Locale.LanguageRange("en-*", 0.8),
 				new Locale.LanguageRange("de", 0.7),
+				new Locale.LanguageRange("*-us", 0.6),
 				new Locale.LanguageRange("*", 0.5)
 		);
 		assertThat(headers.getAcceptLanguage()).isEqualTo(expectedRanges);
-		assertThat(headers.getAcceptLanguageAsLocales().get(0)).isEqualTo(Locale.forLanguageTag("fr-ch"));
+		assertThat(headers.getAcceptLanguageAsLocales()).containsExactly(
+				Locale.forLanguageTag("fr-ch"),
+				Locale.forLanguageTag("fr"),
+				Locale.forLanguageTag("en"),
+				Locale.forLanguageTag("de"));
 
 		headers.setAcceptLanguageAsLocales(Collections.singletonList(Locale.FRANCE));
-		assertThat(headers.getAcceptLanguageAsLocales().get(0)).isEqualTo(Locale.FRANCE);
+		assertThat(headers.getAcceptLanguageAsLocales()).first().isEqualTo(Locale.FRANCE);
 	}
 
 	@Test // SPR-15603
-	void acceptLanguageWithEmptyValue() throws Exception {
+	void acceptLanguageWithEmptyValue() {
 		this.headers.set(HttpHeaders.ACCEPT_LANGUAGE, "");
 		assertThat(this.headers.getAcceptLanguageAsLocales()).isEqualTo(Collections.emptyList());
 	}
@@ -506,7 +509,7 @@ public class HttpHeadersTests {
 
 	@Test
 	void contentLanguageSerialized() {
-		headers.set(HttpHeaders.CONTENT_LANGUAGE,  "de, en_CA");
+		headers.set(HttpHeaders.CONTENT_LANGUAGE, "de, en_CA");
 		assertThat(headers.getContentLanguage()).as("Expected one (first) locale").isEqualTo(Locale.GERMAN);
 	}
 
@@ -554,7 +557,7 @@ public class HttpHeadersTests {
 		headers.setBasicAuth(username, password);
 		String authorization = headers.getFirst(HttpHeaders.AUTHORIZATION);
 		assertThat(authorization).isNotNull();
-		assertThat(authorization.startsWith("Basic ")).isTrue();
+		assertThat(authorization).startsWith("Basic ");
 		byte[] result = Base64.getDecoder().decode(authorization.substring(6).getBytes(StandardCharsets.ISO_8859_1));
 		assertThat(new String(result, StandardCharsets.ISO_8859_1)).isEqualTo("foo:bar");
 	}
@@ -587,8 +590,8 @@ public class HttpHeadersTests {
 		// here to check the behavior of the entire contract.
 
 		// isEmpty() and size()
-		assertThat(keySet.isEmpty()).isFalse();
-		assertThat(keySet.size()).isEqualTo(2);
+		assertThat(keySet).isNotEmpty();
+		assertThat(keySet).hasSize(2);
 
 		// contains()
 		assertThat(keySet.contains("Alpha")).as("Alpha should be present").isTrue();
@@ -610,18 +613,18 @@ public class HttpHeadersTests {
 
 		// remove()
 		assertThat(keySet.remove("Alpha")).isTrue();
-		assertThat(keySet.size()).isEqualTo(1);
-		assertThat(headers.size()).isEqualTo(1);
+		assertThat(keySet).hasSize(1);
+		assertThat(headers).hasSize(1);
 		assertThat(keySet.remove("Alpha")).isFalse();
-		assertThat(keySet.size()).isEqualTo(1);
-		assertThat(headers.size()).isEqualTo(1);
+		assertThat(keySet).hasSize(1);
+		assertThat(headers).hasSize(1);
 
 		// clear()
 		keySet.clear();
-		assertThat(keySet.isEmpty()).isTrue();
-		assertThat(keySet.size()).isEqualTo(0);
-		assertThat(headers.isEmpty()).isTrue();
-		assertThat(headers.size()).isEqualTo(0);
+		assertThat(keySet).isEmpty();
+		assertThat(keySet).isEmpty();
+		assertThat(headers).isEmpty();
+		assertThat(headers).isEmpty();
 
 		// Unsupported operations
 		assertThatExceptionOfType(UnsupportedOperationException.class)
@@ -653,11 +656,11 @@ public class HttpHeadersTests {
 
 		assertThat(removed).isTrue();
 		assertThat(headers.keySet().remove("Alpha")).isFalse();
-		assertThat(headers.size()).isEqualTo(1);
+		assertThat(headers).hasSize(1);
 		assertThat(headers.containsKey("Alpha")).as("Alpha should have been removed").isFalse();
 		assertThat(headers.containsKey("Bravo")).as("Bravo should be present").isTrue();
 		assertThat(headers.keySet()).containsOnly("Bravo");
-		assertThat(headers.entrySet()).containsOnly(entry("Bravo", Arrays.asList("banana")));
+		assertThat(headers.entrySet()).containsOnly(entry("Bravo", List.of("banana")));
 	}
 
 	@Test
@@ -665,13 +668,13 @@ public class HttpHeadersTests {
 		String headerName = "MyHeader";
 		String headerValue = "value";
 
-		assertThat(headers.isEmpty()).isTrue();
+		assertThat(headers).isEmpty();
 		headers.add(headerName, headerValue);
 		assertThat(headers.containsKey(headerName)).isTrue();
 		headers.keySet().removeIf(key -> key.equals(headerName));
-		assertThat(headers.isEmpty()).isTrue();
+		assertThat(headers).isEmpty();
 		headers.add(headerName, headerValue);
-		assertThat(headers.get(headerName).get(0)).isEqualTo(headerValue);
+		assertThat(headers.get(headerName)).containsExactly(headerValue);
 	}
 
 	@Test
@@ -679,13 +682,13 @@ public class HttpHeadersTests {
 		String headerName = "MyHeader";
 		String headerValue = "value";
 
-		assertThat(headers.isEmpty()).isTrue();
+		assertThat(headers).isEmpty();
 		headers.add(headerName, headerValue);
 		assertThat(headers.containsKey(headerName)).isTrue();
 		headers.entrySet().removeIf(entry -> entry.getKey().equals(headerName));
-		assertThat(headers.isEmpty()).isTrue();
+		assertThat(headers).isEmpty();
 		headers.add(headerName, headerValue);
-		assertThat(headers.get(headerName).get(0)).isEqualTo(headerValue);
+		assertThat(headers.get(headerName)).containsExactly(headerValue);
 	}
 
 	@Test
@@ -704,6 +707,31 @@ public class HttpHeadersTests {
 		assertThat(readOnlyHttpHeaders.entrySet()).extracting(Entry::getKey).containsExactly(expectedKeys);
 	}
 
+	@Test
+	void readOnlyHttpHeadersCopyOrderTest() {
+		headers.add("aardvark", "enigma");
+		headers.add("beaver", "enigma");
+		headers.add("cat", "enigma");
+		headers.add("dog", "enigma");
+		headers.add("elephant", "enigma");
+
+		String[] expectedKeys = new String[] { "aardvark", "beaver", "cat", "dog", "elephant" };
+
+		HttpHeaders readOnlyHttpHeaders = HttpHeaders.readOnlyHttpHeaders(headers);
+
+		HttpHeaders forEachHeaders = new HttpHeaders();
+		readOnlyHttpHeaders.forEach(forEachHeaders::putIfAbsent);
+		assertThat(forEachHeaders.entrySet()).extracting(Entry::getKey).containsExactly(expectedKeys);
+
+		HttpHeaders putAllHeaders = new HttpHeaders();
+		putAllHeaders.putAll(readOnlyHttpHeaders);
+		assertThat(putAllHeaders.entrySet()).extracting(Entry::getKey).containsExactly(expectedKeys);
+
+		HttpHeaders addAllHeaders = new HttpHeaders();
+		addAllHeaders.addAll(readOnlyHttpHeaders);
+		assertThat(addAllHeaders.entrySet()).extracting(Entry::getKey).containsExactly(expectedKeys);
+	}
+
 	@Test // gh-25034
 	void equalsUnwrapsHttpHeaders() {
 		HttpHeaders headers1 = new HttpHeaders();
@@ -711,6 +739,21 @@ public class HttpHeadersTests {
 
 		assertThat(headers1).isEqualTo(headers2);
 		assertThat(headers2).isEqualTo(headers1);
+	}
+
+	@Test
+	void getValuesAsList() {
+		HttpHeaders headers = new HttpHeaders();
+		headers.add("Foo", "Bar");
+		headers.add("Foo", "Baz, Qux");
+		headers.add("Quux", "\t\"Corge\", \"Grault\"");
+		headers.add("Garply", " Waldo \"Fred\\!\", \"\tPlugh, Xyzzy! \"");
+		headers.add("Example-Dates", "\"Sat, 04 May 1996\", \"Wed, 14 Sep 2005\"");
+
+		assertThat(headers.getValuesAsList("Foo")).containsExactly("Bar", "Baz", "Qux");
+		assertThat(headers.getValuesAsList("Quux")).containsExactly("Corge", "Grault");
+		assertThat(headers.getValuesAsList("Garply")).containsExactly("Waldo \"Fred\\!\"", "\tPlugh, Xyzzy! ");
+		assertThat(headers.getValuesAsList("Example-Dates")).containsExactly("Sat, 04 May 1996", "Wed, 14 Sep 2005");
 	}
 
 }
