@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2021 the original author or authors.
+ * Copyright 2002-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -43,11 +43,13 @@ import okhttp3.mockwebserver.MockResponse;
 import okhttp3.mockwebserver.MockWebServer;
 import okhttp3.mockwebserver.RecordedRequest;
 import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.Named;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.MethodSource;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
+import reactor.core.publisher.Sinks;
 import reactor.netty.http.client.HttpClient;
 import reactor.netty.resources.ConnectionProvider;
 import reactor.test.StepVerifier;
@@ -62,6 +64,7 @@ import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpMethod;
 import org.springframework.http.HttpRequest;
 import org.springframework.http.HttpStatus;
+import org.springframework.http.HttpStatusCode;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseCookie;
 import org.springframework.http.ResponseEntity;
@@ -70,12 +73,13 @@ import org.springframework.http.client.reactive.HttpComponentsClientHttpConnecto
 import org.springframework.http.client.reactive.JdkClientHttpConnector;
 import org.springframework.http.client.reactive.JettyClientHttpConnector;
 import org.springframework.http.client.reactive.ReactorClientHttpConnector;
-import org.springframework.util.SocketUtils;
+import org.springframework.http.client.reactive.ReactorNetty2ClientHttpConnector;
 import org.springframework.web.reactive.function.BodyExtractors;
 import org.springframework.web.reactive.function.client.WebClient.ResponseSpec;
 import org.springframework.web.testfixture.xml.Pojo;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Named.named;
 
 /**
  * Integration tests using an {@link ExchangeFunction} through {@link WebClient}.
@@ -91,17 +95,17 @@ class WebClientIntegrationTests {
 
 	@Retention(RetentionPolicy.RUNTIME)
 	@Target(ElementType.METHOD)
-	@ParameterizedTest(name = "[{index}] {displayName} [{0}]")
+	@ParameterizedTest(name = "[{index}] {0}")
 	@MethodSource("arguments")
 	@interface ParameterizedWebClientTest {
 	}
 
-	static Stream<ClientHttpConnector> arguments() {
+	static Stream<Named<ClientHttpConnector>> arguments() {
 		return Stream.of(
-				new ReactorClientHttpConnector(),
-				new JdkClientHttpConnector(),
-				new JettyClientHttpConnector(),
-				new HttpComponentsClientHttpConnector()
+				named("Reactor Netty", new ReactorClientHttpConnector()),
+				named("JDK", new JdkClientHttpConnector()),
+				named("Jetty", new JettyClientHttpConnector()),
+				named("HttpComponents", new HttpComponentsClientHttpConnector())
 		);
 	}
 
@@ -193,7 +197,7 @@ class WebClientIntegrationTests {
 		Mono<ValueContainer<Pojo>> result = this.webClient.get()
 				.uri("/json").accept(MediaType.APPLICATION_JSON)
 				.retrieve()
-				.bodyToMono(new ParameterizedTypeReference<ValueContainer<Pojo>>() {});
+				.bodyToMono(new ParameterizedTypeReference<>() {});
 
 		StepVerifier.create(result)
 				.assertNext(c -> assertThat(c.getContainerValue()).isEqualTo(new Pojo("foofoo", "barbar")))
@@ -477,7 +481,7 @@ class WebClientIntegrationTests {
 				.retrieve()
 				.bodyToMono(Map.class);
 
-		StepVerifier.create(result).verifyComplete();
+		StepVerifier.create(result).expectComplete().verify(Duration.ofSeconds(3));
 	}
 
 	@ParameterizedWebClientTest  // SPR-15946
@@ -526,6 +530,7 @@ class WebClientIntegrationTests {
 	}
 
 	@ParameterizedWebClientTest
+	@SuppressWarnings("deprecation")
 	void retrieve500(ClientHttpConnector connector) {
 		startServer(connector);
 
@@ -541,7 +546,7 @@ class WebClientIntegrationTests {
 
 		StepVerifier.create(result)
 				.expectErrorSatisfies(throwable -> {
-					assertThat(throwable instanceof WebClientResponseException).isTrue();
+					assertThat(throwable).isInstanceOf(WebClientResponseException.class);
 					WebClientResponseException ex = (WebClientResponseException) throwable;
 					assertThat(ex.getStatusCode()).isEqualTo(HttpStatus.INTERNAL_SERVER_ERROR);
 					assertThat(ex.getRawStatusCode()).isEqualTo(HttpStatus.INTERNAL_SERVER_ERROR.value());
@@ -633,27 +638,62 @@ class WebClientIntegrationTests {
 	}
 
 	@ParameterizedWebClientTest
+	@SuppressWarnings("deprecation")
 	void retrieve555UnknownStatus(ClientHttpConnector connector) {
 		startServer(connector);
 
 		int errorStatus = 555;
-		assertThat((Object) HttpStatus.resolve(errorStatus)).isNull();
-		String errorMessage = "Something went wrong";
-		prepareResponse(response -> response.setResponseCode(errorStatus)
-				.setHeader("Content-Type", "text/plain").setBody(errorMessage));
+		assertThat(HttpStatus.resolve(errorStatus)).isNull();
 
-		Mono<String> result = this.webClient.get()
-				.uri("/unknownPage")
-				.retrieve()
-				.bodyToMono(String.class);
+		String errorMessage = "Something went wrong";
+		prepareResponse(response ->
+				response.setResponseCode(errorStatus)
+						.setHeader("Content-Type", "text/plain")
+						.setBody(errorMessage));
+
+		Mono<String> result = this.webClient.get().uri("/unknownPage").retrieve().bodyToMono(String.class);
 
 		StepVerifier.create(result)
 				.expectErrorSatisfies(throwable -> {
-					assertThat(throwable instanceof UnknownHttpStatusCodeException).isTrue();
+					assertThat(throwable).isInstanceOf(UnknownHttpStatusCodeException.class);
 					UnknownHttpStatusCodeException ex = (UnknownHttpStatusCodeException) throwable;
 					assertThat(ex.getMessage()).isEqualTo(("Unknown status code ["+errorStatus+"]"));
 					assertThat(ex.getRawStatusCode()).isEqualTo(errorStatus);
-					assertThat(ex.getStatusText()).isEqualTo("");
+					assertThat(ex.getStatusText()).isEmpty();
+					assertThat(ex.getHeaders().getContentType()).isEqualTo(MediaType.TEXT_PLAIN);
+					assertThat(ex.getResponseBodyAsString()).isEqualTo(errorMessage);
+				})
+				.verify(Duration.ofSeconds(3));
+
+		expectRequestCount(1);
+		expectRequest(request -> {
+			assertThat(request.getHeader(HttpHeaders.ACCEPT)).isEqualTo("*/*");
+			assertThat(request.getPath()).isEqualTo("/unknownPage");
+		});
+	}
+
+	@ParameterizedWebClientTest // gh-31202
+	void retrieve929UnknownStatusCode(ClientHttpConnector connector) {
+		startServer(connector);
+
+		int errorStatus = 929;
+		assertThat(HttpStatus.resolve(errorStatus)).isNull();
+
+		String errorMessage = "Something went wrong";
+		prepareResponse(response ->
+				response.setResponseCode(errorStatus)
+						.setHeader("Content-Type", "text/plain")
+						.setBody(errorMessage));
+
+		Mono<String> result = this.webClient.get().uri("/unknownPage").retrieve().bodyToMono(String.class);
+
+		StepVerifier.create(result)
+				.expectErrorSatisfies(throwable -> {
+					assertThat(throwable).isInstanceOf(UnknownHttpStatusCodeException.class);
+					UnknownHttpStatusCodeException ex = (UnknownHttpStatusCodeException) throwable;
+					assertThat(ex.getMessage()).isEqualTo(("Unknown status code ["+errorStatus+"]"));
+					assertThat(ex.getStatusCode().value()).isEqualTo(errorStatus);
+					assertThat(ex.getStatusText()).isEmpty();
 					assertThat(ex.getHeaders().getContentType()).isEqualTo(MediaType.TEXT_PLAIN);
 					assertThat(ex.getResponseBodyAsString()).isEqualTo(errorMessage);
 				})
@@ -697,7 +737,7 @@ class WebClientIntegrationTests {
 	}
 
 	@ParameterizedWebClientTest  // SPR-16246
-	void postLargeTextFile(ClientHttpConnector connector) throws Exception {
+	void postLargeTextFile(ClientHttpConnector connector) {
 		startServer(connector);
 
 		prepareResponse(response -> {});
@@ -719,8 +759,8 @@ class WebClientIntegrationTests {
 			ByteArrayOutputStream bos = new ByteArrayOutputStream();
 			try {
 				request.getBody().copyTo(bos);
-				String actual = bos.toString("UTF-8");
-				String expected = new String(Files.readAllBytes(resource.getFile().toPath()), StandardCharsets.UTF_8);
+				String actual = bos.toString(StandardCharsets.UTF_8);
+				String expected = Files.readString(resource.getFile().toPath(), StandardCharsets.UTF_8);
 				assertThat(actual).isEqualTo(expected);
 			}
 			catch (IOException ex) {
@@ -739,7 +779,7 @@ class WebClientIntegrationTests {
 		Mono<String> result = this.webClient.get()
 				.uri("/greeting")
 				.retrieve()
-				.onStatus(HttpStatus::is5xxServerError, response -> Mono.just(new MyException("500 error!")))
+				.onStatus(HttpStatusCode::is5xxServerError, response -> Mono.just(new MyException("500 error!")))
 				.bodyToMono(String.class);
 
 		StepVerifier.create(result)
@@ -763,8 +803,8 @@ class WebClientIntegrationTests {
 		Mono<String> result = this.webClient.get()
 				.uri("/greeting")
 				.retrieve()
-				.onStatus(HttpStatus::is5xxServerError, response -> Mono.just(new MyException("500 error!")))
-				.bodyToMono(new ParameterizedTypeReference<String>() {});
+				.onStatus(HttpStatusCode::is5xxServerError, response -> Mono.just(new MyException("500 error!")))
+				.bodyToMono(new ParameterizedTypeReference<>() {});
 
 		StepVerifier.create(result)
 				.expectError(MyException.class)
@@ -790,7 +830,7 @@ class WebClientIntegrationTests {
 		Mono<String> result = this.webClient.get()
 				.uri("/json")
 				.retrieve()
-				.onStatus(HttpStatus::isError,
+				.onStatus(HttpStatusCode::isError,
 						response -> response.bodyToMono(Pojo.class)
 								.flatMap(pojo -> Mono.error(new MyException(pojo.getFoo())))
 				)
@@ -802,7 +842,7 @@ class WebClientIntegrationTests {
 					MyException error = (MyException) throwable;
 					assertThat(error.getMessage()).isEqualTo("foofoo");
 				})
-				.verify();
+				.verify(Duration.ofSeconds(3));
 	}
 
 	@ParameterizedWebClientTest
@@ -839,12 +879,12 @@ class WebClientIntegrationTests {
 		Mono<String> result = this.webClient.get()
 				.uri("/greeting")
 				.retrieve()
-				.onStatus(HttpStatus::is5xxServerError, response -> Mono.empty())
+				.onStatus(HttpStatusCode::is5xxServerError, response -> Mono.empty())
 				.bodyToMono(String.class);
 
 		StepVerifier.create(result)
 				.expectNext("Internal Server error")
-				.verifyComplete();
+				.expectComplete().verify(Duration.ofSeconds(3));
 
 		expectRequestCount(1);
 		expectRequest(request -> {
@@ -855,6 +895,12 @@ class WebClientIntegrationTests {
 
 	@ParameterizedWebClientTest
 	void statusHandlerSuppressedErrorSignalWithFlux(ClientHttpConnector connector) {
+
+		// Temporarily disabled, leads to io.netty5.buffer.BufferClosedException
+		if (connector instanceof ReactorNetty2ClientHttpConnector) {
+			return;
+		}
+
 		startServer(connector);
 
 		prepareResponse(response -> response.setResponseCode(500)
@@ -863,12 +909,12 @@ class WebClientIntegrationTests {
 		Flux<String> result = this.webClient.get()
 				.uri("/greeting")
 				.retrieve()
-				.onStatus(HttpStatus::is5xxServerError, response -> Mono.empty())
+				.onStatus(HttpStatusCode::is5xxServerError, response -> Mono.empty())
 				.bodyToFlux(String.class);
 
 		StepVerifier.create(result)
 				.expectNext("Internal Server error")
-				.verifyComplete();
+				.expectComplete().verify(Duration.ofSeconds(3));
 
 		expectRequestCount(1);
 		expectRequest(request -> {
@@ -888,7 +934,7 @@ class WebClientIntegrationTests {
 		Mono<ResponseEntity<String>> result = this.webClient.get()
 				.uri("/").accept(MediaType.APPLICATION_JSON)
 				.retrieve()
-				.onStatus(HttpStatus::is5xxServerError, response -> Mono.empty())// use normal response
+				.onStatus(HttpStatusCode::is5xxServerError, response -> Mono.empty())// use normal response
 				.toEntity(String.class);
 
 		StepVerifier.create(result)
@@ -1026,7 +1072,7 @@ class WebClientIntegrationTests {
 
 		StepVerifier.create(result)
 				.assertNext(r -> assertThat(r.getStatusCode().is2xxSuccessful()).isTrue())
-				.verifyComplete();
+				.expectComplete().verify(Duration.ofSeconds(3));
 	}
 
 	@ParameterizedWebClientTest
@@ -1052,11 +1098,12 @@ class WebClientIntegrationTests {
 	}
 
 	@ParameterizedWebClientTest
+	@SuppressWarnings("deprecation")
 	void exchangeForUnknownStatusCode(ClientHttpConnector connector) {
 		startServer(connector);
 
 		int errorStatus = 555;
-		assertThat((Object) HttpStatus.resolve(errorStatus)).isNull();
+		assertThat(HttpStatus.resolve(errorStatus)).isNull();
 		String errorMessage = "Something went wrong";
 		prepareResponse(response -> response.setResponseCode(errorStatus)
 				.setHeader("Content-Type", "text/plain").setBody(errorMessage));
@@ -1075,24 +1122,6 @@ class WebClientIntegrationTests {
 			assertThat(request.getHeader(HttpHeaders.ACCEPT)).isEqualTo("*/*");
 			assertThat(request.getPath()).isEqualTo("/unknownPage");
 		});
-	}
-
-	@ParameterizedWebClientTest  // SPR-15782
-	void exchangeWithRelativeUrl(ClientHttpConnector connector) {
-		startServer(connector);
-
-		String uri = "/api/v4/groups/1";
-		Mono<ResponseEntity<Void>> responseMono = WebClient.builder().build().get().uri(uri)
-				.retrieve().toBodilessEntity();
-
-		StepVerifier.create(responseMono)
-				.expectErrorSatisfies(throwable -> {
-					assertThat(throwable).isInstanceOf(WebClientRequestException.class);
-					WebClientRequestException ex = (WebClientRequestException) throwable;
-					assertThat(ex.getMethod()).isEqualTo(HttpMethod.GET);
-					assertThat(ex.getUri()).isEqualTo(URI.create(uri));
-				})
-				.verify(Duration.ofSeconds(5));
 	}
 
 	@ParameterizedWebClientTest
@@ -1174,7 +1203,7 @@ class WebClientIntegrationTests {
 
 		prepareResponse(response -> response
 				.setHeader("Content-Type", "text/plain")
-				.addHeader("Set-Cookie", "testkey1=testvalue1;")
+				.addHeader("Set-Cookie", "testkey1=testvalue1") // TODO invalid ";" at the end
 				.addHeader("Set-Cookie", "testkey2=testvalue2; Max-Age=42; HttpOnly; SameSite=Lax; Secure")
 				.setBody("test"));
 
@@ -1204,23 +1233,6 @@ class WebClientIntegrationTests {
 	}
 
 	@ParameterizedWebClientTest
-	void invalidDomain(ClientHttpConnector connector) {
-		startServer(connector);
-
-		String url = "http://example.invalid";
-		Mono<Void> result = this.webClient.get().uri(url).retrieve().bodyToMono(Void.class);
-
-		StepVerifier.create(result)
-				.expectErrorSatisfies(throwable -> {
-					assertThat(throwable).isInstanceOf(WebClientRequestException.class);
-					WebClientRequestException ex = (WebClientRequestException) throwable;
-					assertThat(ex.getMethod()).isEqualTo(HttpMethod.GET);
-					assertThat(ex.getUri()).isEqualTo(URI.create(url));
-				})
-				.verify();
-	}
-
-	@ParameterizedWebClientTest
 	void malformedResponseChunksOnBodilessEntity(ClientHttpConnector connector) {
 		Mono<?> result = doMalformedChunkedResponseTest(connector, ResponseSpec::toBodilessEntity);
 		StepVerifier.create(result)
@@ -1229,7 +1241,7 @@ class WebClientIntegrationTests {
 					WebClientException ex = (WebClientException) throwable;
 					assertThat(ex.getCause()).isInstanceOf(IOException.class);
 				})
-				.verify();
+				.verify(Duration.ofSeconds(3));
 	}
 
 	@ParameterizedWebClientTest
@@ -1241,17 +1253,39 @@ class WebClientIntegrationTests {
 					WebClientException ex = (WebClientException) throwable;
 					assertThat(ex.getCause()).isInstanceOf(IOException.class);
 				})
-				.verify();
+				.verify(Duration.ofSeconds(3));
+	}
+
+	@ParameterizedWebClientTest
+	void retrieveTextDecodedToFlux(ClientHttpConnector connector) {
+		startServer(connector);
+
+		prepareResponse(response -> response
+				.setHeader("Content-Type", "text/plain")
+				.setBody("Hey now"));
+
+		Flux<String> result = this.webClient.get()
+				.uri("/")
+				.accept(MediaType.TEXT_PLAIN)
+				.retrieve()
+				.bodyToFlux(String.class);
+
+		StepVerifier.create(result)
+				.expectNext("Hey now")
+				.expectComplete()
+				.verify(Duration.ofSeconds(3));
 	}
 
 	private <T> Mono<T> doMalformedChunkedResponseTest(
 			ClientHttpConnector connector, Function<ResponseSpec, Mono<T>> handler) {
 
-		int port = SocketUtils.findAvailableTcpPort();
+		Sinks.One<Integer> portSink = Sinks.one();
 
 		Thread serverThread = new Thread(() -> {
 			// No way to simulate a malformed chunked response through MockWebServer.
-			try (ServerSocket serverSocket = new ServerSocket(port)) {
+			try (ServerSocket serverSocket = new ServerSocket(0)) {
+				Sinks.EmitResult result = portSink.tryEmitValue(serverSocket.getLocalPort());
+				assertThat(result).isEqualTo(Sinks.EmitResult.OK);
 				Socket socket = serverSocket.accept();
 				InputStream is = socket.getInputStream();
 
@@ -1259,10 +1293,13 @@ class WebClientIntegrationTests {
 				is.read(new byte[4096]);
 
 				OutputStream os = socket.getOutputStream();
-				os.write("HTTP/1.1 200 OK\r\n".getBytes(StandardCharsets.UTF_8));
-				os.write("Transfer-Encoding: chunked\r\n".getBytes(StandardCharsets.UTF_8));
-				os.write("\r\n".getBytes(StandardCharsets.UTF_8));
-				os.write("lskdu018973t09sylgasjkfg1][]'./.sdlv".getBytes(StandardCharsets.UTF_8));
+				os.write("""
+						HTTP/1.1 200 OK
+						Transfer-Encoding: chunked
+
+						lskdu018973t09sylgasjkfg1][]'./.sdlv"""
+						.replace("\n", "\r\n").getBytes(StandardCharsets.UTF_8));
+
 				socket.close();
 			}
 			catch (IOException ex) {
@@ -1272,12 +1309,13 @@ class WebClientIntegrationTests {
 
 		serverThread.start();
 
-		WebClient client = WebClient.builder()
-				.clientConnector(connector)
-				.baseUrl("http://localhost:" + port)
-				.build();
-
-		return handler.apply(client.post().retrieve());
+		return portSink.asMono().flatMap(port -> {
+			WebClient client = WebClient.builder()
+					.clientConnector(connector)
+					.baseUrl("http://localhost:" + port)
+					.build();
+			return handler.apply(client.post().retrieve());
+		});
 	}
 
 	private void prepareResponse(Consumer<MockResponse> consumer) {
@@ -1322,4 +1360,5 @@ class WebClientIntegrationTests {
 			this.containerValue = containerValue;
 		}
 	}
+
 }
